# iiwa_ros

./: .dockerignore  .gitignore  .gitmodules  .project  CONTRIBUTING.md  Dockerfile  README.md  add_license.py  build-run.sh  remote-dev.sh  run_dual_iiwa_setup.md
config/: ros_entrypoint.sh  update_bashrc
docker/: .dockerignore  Dockerfile  README.md  build-run.sh  build_docker.bash  build_docker.sh  install_docker.sh  remote-dev.sh  ros_entrypoint.sh  (+2 more)
force_sensor/: CMakeLists.txt  README.md  package.xml
force_sensor/meshes/collision/: force_torque_sensor_col.stl  grabber.stl
force_sensor/meshes/visual/: force_torque_sensor_vis.stl
force_sensor/urdf/: force_sensor_tag.xacro  force_torque_sensor.xacro  grabber.xacro
iiwa_control/: CMakeLists.txt  package.xml
iiwa_control/cfg/: ds_impedance_params.cfg
iiwa_control/cmake/: FindControlStack.cmake  FindRobotControllers.cmake
iiwa_control/config/: iiwa_control.yaml
iiwa_control/include/iiwa_control/: custom_effort_controller.hpp  custom_effort_interface.hpp  custom_joint_state_controller.hpp  ds_impedance_controller.hpp
iiwa_control/launch/: iiwa_control.launch  iiwa_position_control.launch  iiwa_torque_control.launch  iiwa_torque_position_control.launch
iiwa_control/msg/: EefState.msg
iiwa_control/plugins/: custom_controller.xml
iiwa_control/src/: custom_effort_controller.cpp  custom_effort_interface.cpp  custom_joint_state_controller.cpp  ds_impedance_controller.cpp
iiwa_description/: CMakeLists.txt  README.md  package.xml
iiwa_description/config/: config.rviz  config_conveyor.rviz  config_conveyor_alone.rviz
iiwa_description/launch/: display_iiwa.launch  iiwa14_upload.launch  iiwa15_upload.launch  iiwa16_upload.launch  iiwa17_upload.launch  iiwa7_upload.launch  iiwa_setup.launch
iiwa_description/meshes/iiwa14/collision/: Brush2.stl  BrushScaled.stl
iiwa_description/meshes/iiwa14/visual/: PegScaled.stl
iiwa_description/urdf/: conveyor_belt.urdf  iiwa.gazebo.xacro  iiwa.transmission.xacro  iiwa14 (copy).xacro  iiwa14.sdf  iiwa14.urdf  iiwa14.urdf.xacro  iiwa14.xacro  iiwa14.xml  iiwa15.urdf.xacro  iiwa15.xacro  iiwa16.urdf.xacro  iiwa16.xacro  iiwa17.urdf.xacro  iiwa17.xacro  iiwa7.urdf  iiwa7.urdf.xacro  iiwa7.xacro  materials.xacro  utilities.xacro
iiwa_driver/: CMakeLists.txt  package.xml
iiwa_driver/cmake/: FindFRI.cmake
iiwa_driver/config/: iiwa.yaml  joint_limits.yaml
iiwa_driver/include/iiwa_driver/: iiwa.h
iiwa_driver/java/: FRIOverlay.java  FRIOverlayGripper.java
iiwa_driver/launch/: display_icub.launch  example_iiwa_bringup.launch  iiwa14_bringup.launch  iiwa7_bringup.launch  iiwa_bringup.launch  iiwa_bringup_double.launch  iiwa_bringup_no_controller.launch  iiwa_bringup_ns.launch  iiwa_bringup_position.launch  iiwa_bringup_torque_position.launch  iiwa_setup.launch
iiwa_driver/msg/: AdditionalOutputs.msg  ConnectionQuality.msg  ExternalTorques.msg  FRIState.msg
iiwa_driver/robots/iCubGazeboV2_5/: model.urdf
iiwa_driver/robots/iCubGazeboV2_5_plus/: model.urdf
iiwa_driver/robots/iCubGenova01/: model.urdf
iiwa_driver/robots/iCubGenova03/: model.urdf
iiwa_driver/robots/iCubGenova04/: model.urdf
iiwa_driver/robots/iCubGenova04_plus/: model.urdf
iiwa_driver/robots/iCubLisboa01/: model.urdf
iiwa_driver/robots/iCubNancy01/: model.urdf
iiwa_driver/robots/iCubParis01/: model.urdf
iiwa_driver/robots/iCubParis02/: model.urdf
iiwa_driver/scripts/: replay.py  test.py
iiwa_driver/src/: iiwa.cpp  iiwa_driver.cpp
iiwa_gazebo/: CMakeLists.txt  iiwa_robot_hw_sim_plugins.xml  package.xml
iiwa_gazebo/config/: iiwa_control.yaml
iiwa_gazebo/include/iiwa_gazebo/: gravity_compensation_hw_sim.h  gravity_compensation_plugin.h  mc_rbdyn_urdf.h
iiwa_gazebo/launch/: conveyor_belt.launch  conveyor_world.launch  iiwa_double_gazebo.launch  iiwa_double_gazebo2.launch  iiwa_gazebo.launch  iiwa_gazebo14.launch  iiwa_gazebo2.launch  iiwa_gazebo7.launch  iiwa_gazebo_position.launch  iiwa_gazebo_torque_position.launch  iiwa_spawner.launch  iiwa_spawner2.launch  real_robots.launch  two_iiwa_world.launch
iiwa_gazebo/src/: gravity_compensation_hw_sim.cpp  gravity_compensation_plugin.cpp  mc_rbdyn_urdf.cpp
iiwa_gazebo/world/: iiwa.world  iiwa_force.world
iiwa_ik_server/: CMakeLists.txt  package.xml
iiwa_ik_server/config/: iiwa_ik.yaml
iiwa_ik_server/include/iiwa_ik_server/: iiwa_ik_server.h
iiwa_ik_server/include/iiwa_ik_server/cvxgen/: ldl.cpp  matrix_support.cpp  solver.cpp  solver.h
iiwa_ik_server/launch/: iiwa_ik_server.launch
iiwa_ik_server/src/: iiwa_ik_server.cpp  iiwa_ik_server_node.cpp
iiwa_ik_server/srv/: GetIK.srv
iiwa_moveit/: CMakeLists.txt  README.md  package.xml
iiwa_moveit/config/: EffortJointInterface_controllers.yaml  PositionJointInterface_controllers.yaml  VelocityJointInterface_controllers.yaml  ompl_planning.yaml
iiwa_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  iiwa_moveit_controller_manager.launch.xml  iiwa_moveit_sensor_manager.launch.xml  joystick_control.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  warehouse_settings.launch.xml
iiwa_ros/: CMakeLists.txt  package.xml
iiwa_ros/paper/: compile_paper.sh  paper.md
iiwa_tools/: CMakeLists.txt  package.xml
iiwa_tools/config/: iiwa_service.yaml  iiwa_tools.yaml
iiwa_tools/include/iiwa_tools/: iiwa_service.h  iiwa_tools.h
iiwa_tools/include/iiwa_tools/cvxgen/: description.cvxgen  format_cvxgen.py  iiwa_ik_cvxgen.hpp  util.cpp
iiwa_tools/launch/: iiwa_service.launch  iiwa_tools.launch
iiwa_tools/msg/: MsgEefState.msg
iiwa_tools/src/: iiwa_eef_node.cpp  iiwa_service.cpp  iiwa_service_node.cpp  iiwa_tools.cpp  iiwa_tools_node.cpp
iiwa_tools/srv/: GetFK.srv  GetGravity.srv  GetIK.srv  GetInertiaMatrix.srv  GetJacobian.srv  GetJacobians.srv  GetMassMatrix.srv  UpdateWeight.srv
(+9 files in other folders)
