<?xml version="1.0"?>
<!--|
    Copyright (C) 2019 Learning Algorithms and Systems Laboratory, EPFL, Switzerland
    Authors:  Patrick Sgrò (maintainer)
    email:    patrick.sgro@hotmail.com
    website:  lasa.epfl.ch

    This file is part of iiwa_ros.

    iiwa_ros is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    iiwa_ros is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

|-->
<package>
  <name>force_sensor</name>
  <version>1.4.0</version>
  <description>This package contains the macro and the 3D object of the force torque sensor</description>
  <author email="patrick.sgro@hotmail.com">Patrick Sgro</author>
  <maintainer email="patrick.sgro@hotmail.com">Patrick Sgro</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
