<?xml version="1.0"?>
<package>
  <name>iiwa_control</name>
  <version>0.0.1</version>
  <description>Control for KUKA's IIWA robot</description>

  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/costashatz/iiwa_ros</url>
  <url type="bugtracker">https://github.com/costashatz/iiwa_ros/issues</url>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>iiwa_service</build_depend>
  
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>iiwa_service</run_depend>

  <export>
    <controller_interface plugin="${prefix}/plugins/custom_controller.xml"/>
  </export>
  
</package>