<?xml version="1.0"?>
<!--|
    Copyright (C) 2019-2022 Learning Algorithms and Systems Laboratory, EPFL, Switzerland
    Authors:  Konstantinos Chatzilygeroudis (maintainer)
              Matthias Mayr
              Bernardo Fichera
    email:    costashatz@gmail.com
              matthias.mayr@cs.lth.se
              bernardo.fichera@epfl.ch
    Other contributors:
              Yoan Mollard (yoan@aubrune.eu)
              Walid Amanhoud (walid.amanhoud@epfl.ch)
    website:  lasa.epfl.ch

    This file is part of iiwa_ros.

    iiwa_ros is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    iiwa_ros is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

|-->
<package>
  <name>iiwa_control</name>
  <version>0.0.1</version>
  <description>Control for KUKA's IIWA robot</description>

  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/costashatz/iiwa_ros</url>
  <url type="bugtracker">https://github.com/costashatz/iiwa_ros/issues</url>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>iiwa_tools</build_depend>
  
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>iiwa_tools</run_depend>

  <export>
    <controller_interface plugin="${prefix}/plugins/custom_controller.xml"/>
  </export>
  
</package>