<?xml version="1.0"?>
<package>
  <name>iiwa_gazebo</name>
  <version>0.0.1</version>
  <description>This package allows to load a KUKA LBR IIWA robot onto Gazebo</description>
  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/costashatz/iiwa_ros</url>
  <url type="bugtracker">https://github.com/costashatz/iiwa_ros/issues</url>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>iiwa_tools</build_depend>

  <run_depend>iiwa_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>iiwa_tools</run_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/iiwa_robot_hw_sim_plugins.xml"/>
  </export>

</package>