<?xml version="1.0"?>
<package>
  <name>iiwa_ik_server</name>
  <version>0.0.1</version>
  <description>This package creates an IK server for the IIWA robot</description>
  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/costashatz/iiwa_ros</url>
  <url type="bugtracker">https://github.com/costashatz/iiwa_ros/issues</url>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trac_ik_lib</build_depend>

  <run_depend>iiwa_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trac_ik_lib</run_depend>

  <export>
  </export>

</package>