<?xml version="1.0"?>
<package>
  <name>iiwa_ros</name>
  <version>0.0.1</version>
  <description>iiwa_ros metapackage contains packages to integrate into KUKA's IIWA robots.</description>

  <maintainer email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</maintainer>


  <license>BSD</license>

  <url type="repository">https://github.com/costashatz/iiwa_ros</url>
  <url type="bugtracker">https://github.com/costashatz/iiwa_ros/issues</url>

  <author email="costashatz@gmail.com">Konstantinos Chatzilygeroudis</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>iiwa_description</run_depend>
  <run_depend>iiwa_driver</run_depend>
  <run_depend>iiwa_control</run_depend>
  <run_depend>iiwa_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>